kubernets-local/mysql-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: app-mysql
  labels:
    app: app-mysql
    tier: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-mysql
        tier: mysql
    spec:
      containers:
      - image: mariadb:latest
        args:
          - "--ignore-db-dir=lost+found"
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
