kubernets-local/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web

  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
      - name: libraryapitest-app
        image: brunocaramelo/libraryapitest-app:v1.0
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "mkdir /usr/share/nginx ; ln -s /var/www/html/public /usr/share/nginx/html;  php-fpm;"]
        ports:
        - containerPort: 9000
      - name: libraryapitest-webserver
        image: nginx
        command: ["/bin/sh", "-c", "touch /usr/share/nginx/html/index.php; nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf-app # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-web
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
   app: app-web
