kubernets-local/sitezao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web-sitezao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web-sitezao

  template:
    metadata:
      labels:
        app: app-web-sitezao
    spec:
      containers:
      - name: libraryapitest-app
        image: brunocaramelo/libraryapitest-app:v2.0
        imagePullPolicy: Always
        # command: ["/bin/sh", "-c", "mkdir /usr/share/nginx ; ln -s /app/public /usr/share/nginx/html;  php-fpm;"]
        command: ["/bin/sh"]
        args:
            - -c
            - |
              sleep 3;
              php artisan optimize;
              php artisan view:cache;
              mkdir /usr/share/nginx;
              ln -s /app/public /usr/share/nginx/html;
              php-fpm
        ports:
        - containerPort: 9000
      - name: libraryapitest-webserver
        image: nginx
        # command: ["/bin/sh", "-c", "touch /usr/share/nginx/html/index.php; nginx -g 'daemon off;'"]
        command: ["/bin/sh"]
        args:
            - -c
            - |
              touch /usr/share/nginx/html/index.php;
              nginx -g "daemon off;"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf-app-sitezao # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-web-sitezao
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8088
    targetPort: 80
  selector:
   app: app-web-sitezao
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schudlerzeiro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schudlerzeiro

  template:
    metadata:
      labels:
        app: schudlerzeiro
    spec:
      containers:
      - name: libraryapitest-app
        image: brunocaramelo/libraryapitest-app:v2.0
        imagePullPolicy: Always
        # command: ["/bin/sh", "-c", "echo '* * * * * cd /var/www/html && /usr/local/bin/php artisan schedule:run >> outputscheduler.log 2>&1' > scheduler.txt ; crontab scheduler.txt ; cron -f ;  php-fpm;"]
        command: ["/bin/sh"]
        args:
            - -c
            - |
              crontab scheduler.txt;
              cron -f
        # ports:
        # - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queueiro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queueiro

  template:
    metadata:
      labels:
        app: queueiro
    spec:
      containers:
      - name: libraryapitest-app
        image: brunocaramelo/libraryapitest-app:v2.0
        imagePullPolicy: Always
        # command: ["/bin/sh", "-c", "/usr/local/bin/php /app/artisan queue:work --verbose --tries=7 --timeout=90  ;  php-fpm;"]
        command: ["/bin/sh"]
        args:
            - -c
            - |
             /usr/local/bin/php /app/artisan queue:work --verbose --tries=7 --timeout=90;
        # ports:
        # - containerPort: 80
