kubernets-local/general-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: libraryapitest-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
    - host: kube-libraryapi.com.br
      http:
        paths:
        - backend:
            serviceName: nginx-app-web-sitezao
            servicePort: 8088
